objects/nFORCE__Feature_Dependency__mdt.object
<CustomObject>
    <description>The object defines dependencies that exists between features.</description>
    <fields>
        <fullName>nFORCE__Controlling_Feature_Name__c</fullName>
        <description>This field is conditionally required. Either the controlling feature name or the controlling feature lookup field must be specified. The field contains the name of the controlling feature. It is recommend that this field is used instead of the controlling feature field.</description>
        <label>Controlling Feature Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Controlling_Feature__c</fullName>
        <description>The field indicates the controlling feature on which there is a dependency. It is recommended to use the Controlling Feature Name field instead of this field as it allows for cross package dependencies to be specified.</description>
        <label>Controlling Feature</label>
        <referenceTo>nFORCE__Feature__mdt</referenceTo>
        <relationshipLabel>Controlling Feature Dependencies</relationshipLabel>
        <relationshipName>Controlling_Feature_Dependencies</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>nFORCE__Dependency_Type__c</fullName>
        <description>This field is required. It specifies the type of dependency that exists between the two features.</description>
        <label>Dependency Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                    <default>true</default>
                    <label>Required</label>
                </value>
                <value>
                    <fullName>Not Allowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Dependent_Feature__c</fullName>
        <description>This field is required. It specifies the feature that has a dependency on the controlling feature.</description>
        <label>Dependent Feature</label>
        <referenceTo>nFORCE__Feature__mdt</referenceTo>
        <relationshipLabel>Dependent Feature Dependencies</relationshipLabel>
        <relationshipName>Dependent_Feature_Dependencies</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Feature Dependency</label>
    <pluralLabel>Feature Dependencies</pluralLabel>
</CustomObject>